# Deepseek-Company-search

./: .env.example  .gitignore  DEPLOYMENT.md  FIX_PLAN.md  HANOFF.md  README.md  company_data.db  debug_encoding.py  debug_error.py  debug_flask.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_async.py  test_brand.py  test_offer.py  trace_error.py
.github/workflows/: deploy.yml  publish.yml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.build.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: seed.mjs
backend/src/: app.module.ts  main.ts
backend/src/config/: ai.config.ts  jwt.config.ts
backend/src/events/: events.gateway.ts  events.module.ts
backend/test/: app.e2e-spec.ts
data/: company_memory.json  mock_companies.json
docs/: API_DESIGN_v1.md  DB_DESIGN_v1.md  GA_CHECKLIST.md  PRD_v1.md  UI_DESIGN_v1.md  USER_FLOW_v1.md  V2_ROADMAP.md  fix_history.md  issue_log.md  optimization_log.md
docs/adr/: ADR-001-api-data-writeback.md
docs/operations/: MONITORING.md  OPS_MANUAL.md
docs/security/: PRIVACY_POLICY.md  SECURITY_CHECKLIST.md
frontend/: .dockerignore  commitlint.config.mjs  lint-staged.config.mjs  package-lock.json  package.json
frontend/src/api/: client.ts
scripts/: extract_partials.py
src/: company_knowledge.db
src/company_lookup/: __init__.py  ai_analyzer.py  app.py  cli.py  comparer.py  config.py  data_store.py  fetcher.py  htmx_utils.py  plugins.py  run.py
src/data/: company_memory.json  jobboard.db
tests/: __init__.py  conftest.py  test_search.py
(+237 files in other folders)
